2011-01-16  Kent Tamura  <tkent@chromium.org>

        Unreviewed, Chromium build fix.

        * Scripts/update-webkit-chromium: Webkit/chromium -> Source/WebKit/chromium

2011-01-16  Martin Robinson  <mrobinson@igalia.com>

        Build fix for GTK+ after source directory movement.

        * GNUmakefile.am: Correct include paths.

2011-01-16  Adam Barth  <abarth@webkit.org>

        Teach svn-apply about WebKit move.

        * Scripts/VCSUtils.pm:

2011-01-16  Adam Barth  <abarth@webkit.org>

        Rubber-stamped by Eric Seidel.

        Move WebKit into Source
        https://bugs.webkit.org/show_bug.cgi?id=52530

        * DumpRenderTree/mac/InternalHeaders/WebKit/WebTypesInternal.h:
        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        * DumpRenderTree/qt/DumpRenderTreeQt.h:
        * DumpRenderTree/qt/GCControllerQt.cpp:
        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        * DumpRenderTree/qt/PlainTextControllerQt.cpp:
        * DumpRenderTree/qt/TextInputControllerQt.cpp:
        * DumpRenderTree/wscript:
        * QtTestBrowser/launcherwindow.h:
        * Scripts/build-webkit:
        * Scripts/webkitdirs.pm:

2011-01-15  Adam Barth  <abarth@webkit.org>

        Teach svn-apply about WebKit2 move.

        * Scripts/VCSUtils.pm:

2011-01-15  Adam Barth  <abarth@webkit.org>

        Rubber-stamped by Eric Seidel.

        Move WebKit2 into Source
        https://bugs.webkit.org/show_bug.cgi?id=52438

        * MiniBrowser/qt/MiniBrowser.pro:
        * Scripts/build-webkit:
        * Scripts/do-file-rename:
        * Scripts/do-webcore-rename:
        * Scripts/test-webkitpy:
        * Scripts/webkitdirs.pm:
        * Scripts/webkitpy/style/checker.py:
        * WebKitTestRunner/DerivedSources.pro:
        * WebKitTestRunner/InjectedBundle/qt/InjectedBundle.pro:
        * WebKitTestRunner/qt/WebKitTestRunner.pro:

2011-01-15  Jochen Eisinger  <jochen@chromium.org>

        Reviewed by David Levin.
